lang et install script

--- a/config.json
+++ b/config.json
@@ -7,5 +7,6 @@
     "clan_tag" : "tag_de_votre_clan (#xxxxx)",
     "api_key" : "api_key",
     "discord_token" : "",
-    "discord_channel" : ""
+    "discord_channel" : "",
+    "lang" : "fr"
 }
